Fix spacing issue

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,8 +5,6 @@
 
 .page,
 .post {
-  margin-bottom: 4em;
-
   li + li {
     margin-top: .25rem;
   }
